<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="734dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background"
            android:contentDescription="@string/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonColor"
            android:text="@string/validate" />

        <TextView
            android:id="@+id/answerGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerGood"
            android:textSize="24sp"
            android:textColor="@color/green"
            android:visibility="gone" />

        <TextView
            android:id="@+id/answerBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerBad"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:visibility="gone" />

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

        <Button
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonColor"
            android:text="@string/main" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>