<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

  <LinearLayout
      android:layout_width="412dp"
      android:layout_height="734dp"
      android:orientation="vertical"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/background"
        android:contentDescription="@string/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background" />
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <TextView
        android:id="@+id/operationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_operation"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/successPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_percentage"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/operationLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_operation"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ButtonColor"
        android:text="@string/buttonPrevious" />


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>