<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="734dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/background"
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/buttonGame"
            android:layout_width="409dp"
            android:layout_height="73dp"
            android:backgroundTint="@color/ButtonColor"
            android:text="@string/game"
            android:textColor="@color/TextColor" />

        <Button
            android:id="@+id/buttonScore"
            android:layout_width="409dp"
            android:layout_height="73dp"
            android:backgroundTint="@color/ButtonColor"
            android:text="@string/score"
            android:textColor="@color/TextColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>